@@ -9,6 +9,8 @@ define( function( require ) {
   'use strict';
 
   // imports
+  var Fluid = require( 'PH_SCALE/common/model/Fluid' );
+  var inherit = require( 'PHET_CORE/inherit' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
 
@@ -19,10 +21,10 @@ define( function( require ) {
     assert && assert( PHScaleConstants.PH_RANGE.contains( pH ) ); // pH is in range
     this.name = name;
     this.pH = pH;
-    this.color = color;
+    Fluid.call( this, color );
   }
 
   Solvent.WATER = new Solvent( waterString, 7, PHScaleColors.H2O.withAlpha( 127 / 255 ) );
 
-  return Solvent;
+  return inherit( Fluid, Solvent );
 } );
