@@ -11,9 +11,11 @@ define( function( require ) {
   // imports
   var BeakerNode = require( 'PH_SCALE/common/view/BeakerNode' );
   var Bounds2 = require( 'DOT/Bounds2' );
+  var FaucetFluidNode = require( 'PH_SCALE/common/view/FaucetFluidNode' );
   var inherit = require( 'PHET_CORE/inherit' );
   var Node = require( 'SCENERY/nodes/Node' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
+  var PHFaucetNode = require( 'PH_SCALE/common/view/PHFaucetNode' );
   var ResetAllButton = require( 'SCENERY_PHET/ResetAllButton' );
   var ScreenView = require( 'JOIST/ScreenView' );
 
@@ -31,14 +33,27 @@ define( function( require ) {
     var rootNode = new Node();
     thisView.addChild( rootNode );
 
-    // nodes
+    // baker
     var beakerNode = new BeakerNode( model.beaker, mvt );
+
+    // faucets
+    var solventFaucetNode = new PHFaucetNode( model.solventFaucet, mvt );
+    var drainFaucetNode = new PHFaucetNode( model.drainFaucet, mvt );
+    var SOLVENT_FLUID_HEIGHT = model.beaker.location.y - model.solventFaucet.location.y;
+    var DRAIN_FLUID_HEIGHT = 1000; // tall enough that resizing the play area is unlikely to show bottom of fluid
+    var solventFluidNode = new FaucetFluidNode( model.solventFaucet, model.solution.solvent, SOLVENT_FLUID_HEIGHT, mvt );
+    var drainFluidNode = new FaucetFluidNode( model.drainFaucet, model.solution, DRAIN_FLUID_HEIGHT, mvt );
+
     var resetAllButton = new ResetAllButton( function() {
       model.reset();
     } );
 
     // Rendering order
     rootNode.addChild( beakerNode );
+    rootNode.addChild( solventFaucetNode );
+    rootNode.addChild( drainFaucetNode );
+    rootNode.addChild( solventFluidNode );
+    rootNode.addChild( drainFluidNode );
     rootNode.addChild( resetAllButton );
 
     // Layout
